⚡️ improve startup times
The following modifications improve startup times, especially when
restarting the cluster:

- Put coredns in initial kustomization. Only create one replica and
  shorten readinessProbe.
- Shorten metrics server readinessProbe.
- Don't clear IPtables when stopping the cluster. The recreation of the
  iptables rules take about 30 seconds

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -90,6 +90,8 @@ nfpms:
         dst: /etc/iknite.d/base/kube-vip-addresspool.yaml
       - src: apk/iknite.d/base/kube-flannel.yaml
         dst: /etc/iknite.d/base/kube-flannel.yaml
+      - src: apk/iknite.d/base/coredns.yaml
+        dst: /etc/iknite.d/base/coredns.yaml
       - src: apk/init.d/iknite
         dst: /etc/init.d/iknite
       - src: apk/conf.d/iknite
