--- a/apk/iknite.d/base/kube-flannel.yaml
+++ b/apk/iknite.d/base/kube-flannel.yaml
@@ -1,4 +1,3 @@
----
 kind: Namespace
 apiVersion: v1
 metadata:
@@ -113,7 +112,8 @@ spec:
       serviceAccountName: flannel
       containers:
         - name: kube-flannel
-          image: docker.io/flannel/flannel:v0.25.1
+          image: ghcr.io/flannel-io/flannel:v0.26.5
+          imagePullPolicy: IfNotPresent
           command:
             - /opt/bin/flanneld
           args:
