--- a/apk/iknite.d/base/coredns.yaml
+++ b/apk/iknite.d/base/coredns.yaml
@@ -140,7 +140,8 @@ spec:
               path: /health
               port: 8080
               scheme: HTTP
-            initialDelaySeconds: 10
+            initialDelaySeconds: 5
+            periodSeconds: 10
             timeoutSeconds: 5
             successThreshold: 1
             failureThreshold: 5
