--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -104,7 +104,7 @@ nfpms:
         dst: /etc/buildkit/buildkitd.toml
     apk:
       signature:
-        key_file: gpg_key.asc
+        key_file: kaweezle-devel@kaweezle.com-c9d89864.rsa
         key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 release:
   extra_files:
