--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  tf_version: "1.11.1"
+  tg_version: "0.77.6"
+
 jobs:
   goreleaser-snapshot:
     name: Test GoReleaser packaging
@@ -23,9 +27,16 @@ jobs:
         shell: bash
         run: |
           echo -e "$GPG_PRIVATE_KEY" > kaweezle-devel@kaweezle.com-c9d89864.rsa
+          chmod 600 kaweezle-devel@kaweezle.com-c9d89864.rsa
           openssl rsa -in kaweezle-devel@kaweezle.com-c9d89864.rsa -pubout -out kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+          mkdir -p ~/.ssh && chmod 700 ~/.ssh
+          cp kaweezle-devel@kaweezle.com-c9d89864.rsa ~/.ssh/id_rsa
+          mkdir -p ~/.config/sops/age
+          echo -e "$AGE_PRIVATE_KEY" > ~/.config/sops/age/keys.txt
+          chmod 600 ~/.config/sops/age/keys.txt
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          AGE_PRIVATE_KEY: ${{ secrets.AGE_PRIVATE_KEY }}
       - name: Run GoReleaser Tests
         uses: goreleaser/goreleaser-action@v5
         with:
@@ -54,6 +65,13 @@ jobs:
             dist/*.apk
             dist/metadata.json
             dist/SHA256SUMS
+      - name: Download krmfnbuiltin apk
+        run: |
+          cd dist
+          LATEST_VERSION=$(curl --silent  https://api.github.com/repos/kaweezle/krmfnbuiltin/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.x86_64.apk"
+          curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.i386.apk"
+          cd ..
       - name: Build APK repo
         uses: ./.github/actions/make-apkindex
         with:
@@ -61,20 +79,26 @@ jobs:
           signature_key: "${{ secrets.GPG_PRIVATE_KEY }}"
           signature_key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa
           destination: dist/repo
-      - name: Commit repo to kaweezle.com
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.REPO_ACCESS_TOKEN }}
-        with:
-          source-directory: dist/repo
-          destination-github-username: kaweezle
-          destination-repository-name: kaweezle.github.io
-          # TODO: replace with kaweezle-devel
-          user-name: antoinemartin
-          user-email: antoine@openance.com
-          target-branch: release-iknite-test
-          target-directory: docs/repo
-          commit-message: iknite APK repo ${{ github.ref_name }}
+      - name: Upload APK repo
+        run: |
+          echo "::group::Instaling tenv"
+          LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${LATEST_VERSION}_amd64.deb"
+          sudo dpkg -i "tenv_${LATEST_VERSION}_amd64.deb"
+          echo "::endgroup::"
+
+          echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
+          tenv tf install $tf_version
+          tenv tg install $tg_version
+          echo "::endgroup::"
+
+          echo "::group::Running terragrunt module"
+          export TF_PLUGIN_CACHE_DIR="$HOME/.cache/terraform/plugin-cache"
+          mkdir -p $TF_PLUGIN_CACHE_DIR
+          cd support/iac/iknite/testrepo
+          terragrunt init
+          terragrunt apply -auto-approve
+          echo "::endgroup::"
 
   build-rootfs:
     name: Build Root Filesystem for WSL
@@ -114,6 +138,7 @@ jobs:
           mkdir -p /tmp/.buildx-cache
           mkdir -p /tmp/.buildx-cache-new
           docker buildx build \
+             --build-arg IKNITE_REPO_URL=http://kwzl-apkrepo.s3-website.gra.io.cloud.ovh.net/test/ \
              --build-arg IKNITE_VERSION=$IKNITE_VERSION \
              --build-arg IKNITE_LAST_TAG=$IKNITE_LAST_TAG \
              --allow security.insecure \
