--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.21
 
 ARG IKNITE_VERSION=0.2.5-devel
 ARG IKNITE_LAST_TAG=v0.2.4
-ARG IKNITE_REPO_URL=https://kaweezle.com/repo/
+ARG IKNITE_REPO_URL=http://kwzl-apkrepo.s3-website.gra.io.cloud.ovh.net/repo/
 ARG IKNITE_KEY_NAME=kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 ARG IKNITE_BASE_URL=https://github.com/kaweezle/iknite/releases/download
 ARG KUBERNETES_VERSION=1.32.3
