📌Bump k8s version to 1.34.3

--- a/support/apk/iknite-images.yaml
+++ b/support/apk/iknite-images.yaml
@@ -5,7 +5,7 @@
 # doas nerdctl run --privileged --rm -v $(pwd):/work cgr.dev/chainguard/melange build support/apk/iknite-images.yaml --arch $(uname -m)
 package:
   name: iknite-images
-  version: 1.32.3
+  version: 1.34.3
   description: A collection of containerd images for the iknite project.
   copyright:
     - license: Apache-2.0
@@ -185,17 +185,18 @@ pipeline:
   - name: Download images
     runs: |
       DEST_DIR=${{targets.destdir}}/usr/share/iknite/images
-      KUBERNETES_VERSION=1.32.3
+      KUBERNETES_VERSION=1.34.3
+      KUBECTL_VERSION=1.34.2
 
       mkdir -p $DEST_DIR
       mkdir -p /var/tmp
       cd $DEST_DIR
-      skopeo copy docker://registry.k8s.io/pause:3.10 oci-archive:pause_3.10.tar:registry.k8s.io/pause:3.10
-      gzip pause_3.10.tar
+      skopeo copy docker://registry.k8s.io/pause:3.10.1 oci-archive:pause_3.10.1.tar:registry.k8s.io/pause:3.10.1
+      gzip pause_3.10.1.tar
       skopeo copy docker://registry.k8s.io/pause:3.9 oci-archive:pause_3.9.tar:registry.k8s.io/pause:3.9
       gzip pause_3.9.tar
-      skopeo copy docker://registry.k8s.io/etcd:3.5.12-0 oci-archive:etcd_3.5.12-0.tar:registry.k8s.io/etcd:3.5.12-0
-      gzip etcd_3.5.12-0.tar
+      skopeo copy docker://registry.k8s.io/etcd:3.6.5-0 oci-archive:etcd_3.6.5-0.tar:registry.k8s.io/etcd:3.6.5-0
+      gzip etcd_3.6.5-0.tar
       skopeo copy docker://registry.k8s.io/kube-controller-manager:v${KUBERNETES_VERSION} oci-archive:kube-controller-manager_v${KUBERNETES_VERSION}.tar:registry.k8s.io/kube-controller-manager:v${KUBERNETES_VERSION}
       gzip kube-controller-manager_v${KUBERNETES_VERSION}.tar
       skopeo copy docker://registry.k8s.io/kube-scheduler:v${KUBERNETES_VERSION} oci-archive:kube-scheduler_v${KUBERNETES_VERSION}.tar:registry.k8s.io/kube-scheduler:v${KUBERNETES_VERSION}
@@ -206,18 +207,18 @@ pipeline:
       gzip kube-proxy_v${KUBERNETES_VERSION}.tar
       skopeo copy docker://registry.k8s.io/coredns/coredns:v1.11.1 oci-archive:coredns_v1.11.1.tar:registry.k8s.io/coredns/coredns:v1.11.1
       gzip coredns_v1.11.1.tar
-      skopeo copy docker://docker.io/rancher/local-path-provisioner:v0.0.31 oci-archive:local-path-provisioner_v0.0.31.tar:docker.io/rancher/local-path-provisioner:v0.0.31
-      gzip local-path-provisioner_v0.0.31.tar
-      skopeo copy docker://registry.k8s.io/metrics-server/metrics-server:v0.7.2 oci-archive:metrics-server_v0.7.2.tar:registry.k8s.io/metrics-server/metrics-server:v0.7.2
-      gzip metrics-server_v0.7.2.tar
+      skopeo copy docker://docker.io/rancher/local-path-provisioner:v0.0.33 oci-archive:local-path-provisioner_v0.0.33.tar:docker.io/rancher/local-path-provisioner:v0.0.33
+      gzip local-path-provisioner_v0.0.33.tar
+      skopeo copy docker://registry.k8s.io/metrics-server/metrics-server:v0.8.0 oci-archive:metrics-server_v0.8.0.tar:registry.k8s.io/metrics-server/metrics-server:v0.8.0
+      gzip metrics-server_v0.8.0.tar
       skopeo copy docker://ghcr.io/flannel-io/flannel:v0.26.5 oci-archive:flannel_v0.26.5.tar:ghcr.io/flannel-io/flannel:v0.26.5
       gzip flannel_v0.26.5.tar
-      skopeo copy docker://ghcr.io/boxboat/kubectl:${KUBERNETES_VERSION} oci-archive:kubectl_v${KUBERNETES_VERSION}.tar:ghcr.io/boxboat/kubectl:${KUBERNETES_VERSION}
-      gzip kubectl_v${KUBERNETES_VERSION}.tar
+      skopeo copy docker://docker.io/alpine/kubectl:${KUBECTL_VERSION} oci-archive:kubectl_v${KUBECTL_VERSION}.tar:docker.io/alpine/kubectl:${KUBECTL_VERSION}
+      gzip kubectl_v${KUBECTL_VERSION}.tar
       skopeo copy docker://ghcr.io/kube-vip/kube-vip:v0.8.9 oci-archive:kube-vip_v0.8.9.tar:ghcr.io/kube-vip/kube-vip:v0.8.9
       gzip kube-vip_v0.8.9.tar
-      skopeo copy docker://ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.11 oci-archive:kube-vip-cloud-provider_v0.0.11.tar:ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.11
-      gzip kube-vip-cloud-provider_v0.0.11.tar
+      skopeo copy docker://ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.12 oci-archive:kube-vip-cloud-provider_v0.0.12.tar:ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.12
+      gzip kube-vip-cloud-provider_v0.0.12.tar
 
 test:
   environment:
