--- a/pkg/provision/base/kube-vip-addresspool.yaml
+++ b/pkg/provision/base/kube-vip-addresspool.yaml
@@ -99,7 +99,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: create-address-pools
-          image: ghcr.io/boxboat/kubectl:1.32.3
+          image: docker.io/alpine/kubectl:1.34.2
           imagePullPolicy: IfNotPresent
           command:
             - /bin/sh
