🚧 Preparing a dev container
And a script that runs the complete workflow:

- Build the iknite alpine package
- Build the base images package
- Build the root filesystem

--- a/apk/buildkit/buildkitd.toml
+++ b/apk/buildkit/buildkitd.toml
@@ -1,4 +1,8 @@
 debug = false
+
+# insecure-entitlements allows insecure entitlements, disabled by default.
+# insecure-entitlements = [ "network.host", "security.insecure" ]
+
 [worker.oci]
   enabled = false
 
