--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - ".github/workflows/go.yaml"
 
 jobs:
   build:
